# mavlink_drone_sdk_tests

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bin_to_deploy.txt  build.sh  build_all.sh  deploy.sh  run_on_raspi.sh  start_router.sh  tcp_telemetry_test.cpp  tcp_vpe_sender.cpp  udp_telemetry_test.cpp
configs/: fisheye_cam_320_opencv.yml  tcp_telemetry_test.txt  udp_telemetry_test.txt
deploy_conf/: bin_to_deploy.txt  lib_to_deploy.txt
drone_scripts/: get_version.sh  log.sh  run_prog.sh  run_prog_new_logo.sh  run_prog_old_logo.sh  start_router.sh
maps/: map.txt
src/: tcp_telemetry_test.cpp  tcp_test.cpp  udp_telemetry_test.cpp  udp_test.cpp  udp_vpe_sender.cpp
